# pracmln

./: .gitignore  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  README.md  readme.md  readme.txt  requirements.txt  requirements_nonpip.txt  setup.py  test.py
_version/: __init__.py
doc/: Makefile  apidoc.rst  conf.py  dbapi.rst  evaluation.rst  index.rst  inferencemethods.rst  installation.rst  intro.rst  learningmethods.rst  make.bat  mln_syntax.rst  mlnapi.rst  mlnlearningtool.rst  mlnquerytool.rst  mlntutorial.rst  refs.bib  requirements.txt  tools.rst  tutorial.rst
doc/built_doc/: .buildinfo  apidoc.html  evaluation.html  features.html  genindex.html  index.html  inferencemethods.html  installation.html  learningmethods.html  mln_syntax.html  mlnlearningtool.html  mlnquerytool.html  mlntutorial.html  objects.inv  py-modindex.html  search.html  searchindex.js  tools.html  tutorial.html
doc/built_doc/.doctrees/: apidoc.doctree  environment.pickle  evaluation.doctree  features.doctree  index.doctree  inferencemethods.doctree  installation.doctree  learningmethods.doctree  mln_syntax.doctree  mlnlearningtool.doctree  mlnquerytool.doctree  mlntutorial.doctree  tools.doctree  tutorial.doctree
doc/built_doc/_sources/: apidoc.rst.txt  evaluation.rst.txt  features.rst.txt  index.rst.txt  inferencemethods.rst.txt  installation.rst.txt  mln_syntax.rst.txt  (+2 more)
doc/prac_theme/: __init__.py  footer.html  layout.html  teaser.html  theme.conf
doc/source/: apidoc.rst  conf.py  index.rst  installation.rst  learningmethods.rst  mlnlearningtool.rst  mlntutorial.rst  refs.bib  tools.rst  tutorial.rst
etc/: default.tex
examples/alarm/: alarm.pracmln
examples/hmm/: hmm.pracmln
examples/meals/: meals.pracmln
examples/object-recognition/: object-recognition.pracmln
examples/smokers/: smokers.pracmln
examples/taxonomies/: taxonomies.pracmln
examples/tweety/: tweety.pracmln
examples/vegetarians/: vegetarians.pracmln
libpracmln/: CMakeLists.txt
libpracmln/include/pracmln/: mln.h
libpracmln/src/: mln.cpp  test_mln.cpp
pracmln/: __init__.py  mlnlearn.py  mlnquery.py  xval.py
pracmln/logic/: common.py  fol.py  fuzzy.py  grammar.py  sat.py
pracmln/mln/: base.py  database.py  errors.py  methods.py  mlnpreds.py  mrf.py  mrfvars.py  util.py
pracmln/praclog/: __init__.py  logformat.py
pracmln/utils/: clustering.py  config.py  eval.py  evalSeqLabels.py  graphml.py  latexmath2png.py  multicore.py  plot.py  pmml2graphml.py  project.py  sortedcoll.py  undo.py  visualization.py  widgets.py
pracmln/wcsp/: wcsp.py
python2/: .gitignore  requirements.txt
python2/pracmln/: __init__.py  libpracmln.py  mlnlearn.py  mlnquery.py  test.py
python2/rosmln/: CMakeLists.txt  mainpage.dox  manifest.xml
python3/: build-cython.sh  requirements.txt
python3/pracmln/: __init__.py  _version  libpracmln.py  mlnlearn.py  mlnquery.py  test.py  test_ci.py  xval.py
python3/rosmln/: package.xml
python3/rosmln/scripts/: mln_client.py
python3/rosmln/srv/: MLNInterface.srv
rosmln/: CMakeLists.txt
rosmln/java/: ROSMLN.java
rosmln/msg/: MLNConfig.msg  MLNDatabase.msg  MLNQuery.msg  MRFClique.msg
rosmln/scripts/: mln_client.py  mln_server.py  start_mln_server
(+190 files in other folders)
